--- a/blog/templates/static/profile.html
+++ b/blog/templates/static/profile.html
@@ -2,15 +2,17 @@
 <!DOCTYPE html>
     <html>
     <head>
-    <link rel="stylesheet" href="{%static 'css/chatroom.css' %}">
+    <link rel="stylesheet" href="{%static 'css/header.css' %}">
+    <link rel="stylesheet" href="{%static 'css/profile.css' %}">
     <title>  
-        {{news.title}}
+        {{user.username}}
     </title>
     </head>
     <body>
         <div class="header">
             <a class="left" href="{% url 'home' %}">
-                <img src="{%static 'img/newsroom.svg' %}" class="icon "alt=""><h1>NewsRoom</h1>
+                <img src="{%static 'img/newsroom.svg' %}" class="icon "alt="">
+                <h1>NewsRoom</h1>
             </a>
             <div class="right">
                 <a href="{% url 'profile' %}">
@@ -19,32 +21,6 @@
             </div>
         </div>
         <div class="chatroom">
-            <div class="body"> 
-                <div class="post">
-                    <div class="img">
-                        <img src="{{news.image}}" class="img" alt="{{news.title}}">
-                    </div>
-                    <h2>{{news.title}}</h2>
-                    {{news.post}}
-                    <footer>Data supplied by NewsApi Website</footer>
-                </div>
-                <div class="comment">
-                    <div class="commmentbox">
-                        <ul>
-                            {% for comment in comments %}
-                                <li><a href = "{% url 'viewcomment' %}">{{comment.name.username}}: {{comment.comment}}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="input">
-                        <form action="{% url 'chatroom' %}" method="POST">{% csrf_token %}
-                                <input type="hidden" value="{{news.title}}" name="title">
-                                <textarea name="newcomment" id="newcomment" placeholder="add comment..."></textarea>
-                                <input type="submit" value="send">
-                        </form>
-                    </div>
-                </div>
-            </div>
         </div>
     </body>
 </html>
