--- a/blog/templates/static/profile.html
+++ b/blog/templates/static/profile.html
@@ -20,7 +20,21 @@
                 </a>
             </div>
         </div>
-        <div class="chatroom">
+        <div class="profile">
+            <div class="profileinfo">
+                <img src="{% static 'img/profile.svg' %%}" alt="" class="profileimage">
+                <div class="info">
+                    <h1>Name</h1>
+                    <ul>
+                        <li>Total comments made: </li>
+                        <li>Total story engagement: </li>
+                        <li>Verified field: </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="chatinfo">
+                <h2>Comments</h2>
+            </div>
         </div>
     </body>
 </html>
