--- a/blog/templates/static/profile.html
+++ b/blog/templates/static/profile.html
@@ -24,16 +24,21 @@
             <div class="profileinfo">
                 <img src="{% static 'img/profile.svg' %%}" alt="" class="profileimage">
                 <div class="info">
-                    <h1>Name</h1>
+                    <p id="name">{{user.username}}</p>
                     <ul>
-                        <li>Total comments made: </li>
-                        <li>Total story engagement: </li>
-                        <li>Verified field: </li>
+                        <li>Total comments made: {{commentsNum}}</li>
+                        <li>Total story engagement: {{storiesNum}}</li>
+                        <li>Verified field: TODO</li>
                     </ul>
                 </div>
             </div>
             <div class="chatinfo">
                 <h2>Comments</h2>
+                <ul>
+                    {% for comment in comments %}
+                        <li><a href = "{% url 'viewcomment' %}"><span class="story">{{comment.news}}: </span> {{comment.comment}}</a></li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </body>
