feat: Create requirements.tex

--- a/blog/templates/static/profile.html
+++ b/blog/templates/static/profile.html
@@ -28,7 +28,7 @@
                     <ul>
                         <li>Total comments made: {{commentsNum}}</li>
                         <li>Total story engagement: {{storiesNum}}</li>
-                        <li>Verified field: TODO</li>
+                        <li>Verified field: Coming soon</li>
                     </ul>
                 </div>
             </div>
