--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -1,19 +1,20 @@
 <!-- templates/base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <link rel="stylesheet" href="{%static 'css/base.css' %}">
+  <link rel="shortcut icon" href="{%static 'img/newsroom.svg' %}" />
+  <title>{% block title %}NewsRoom{% endblock %}</title>
 </head>
 <body>
-    {% if user.is_authenticated %}
-        Hi {{ user.username }}!
-        <p><a href="{% url 'logout' %}">logout</a></p>
-    {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">login</a>
-    {% endif %}
   <main>
+    <h1 class="header"><img src="{%static 'img/newsroom.svg' %}" class="icon "alt="">NewsRoom</h1>
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}, you are already logged in!
+        <p><a href="{% url 'logout' %}">logout</a></p>
+    {% endif %}
     {% block content %}
     {% endblock %}
   </main>
