--- a/authentication/templates/signup.html
+++ b/authentication/templates/signup.html
@@ -1,13 +1,19 @@
-<!-- templates/signup.html -->
-{% extends 'base.html' %}
-
-{% block title %}Sign Up{% endblock %}
-
+{% extends "base.html" %}
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
+ <div class="container">
+      <div class="row justify-content-center align-items-center" style="height:80vh;">
+          <div class="col-auto border p-3">
+              {% if form.errors %}
+              <p class="bg-danger p-2">Please give correct information !</p>
+              {% endif %}
+              <form method="post" action="">
+              {% csrf_token %}
+              {{ form.as_p}}
+              <input class="mt-3" type="submit" value="Submit" />
+              <input type="hidden" name="next" value="{{ next }}" />
+              </form>
+              <h3><a href="{% url 'login' %}">Login</a></h3>
+          </div>
+      </div>
+  </div>
 {% endblock %}
