--- a/blog/templates/static/chatroom.html
+++ b/blog/templates/static/chatroom.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
     <html>
     <head>
+    <link rel="stylesheet" href="{%static 'css/header.css' %}">
     <link rel="stylesheet" href="{%static 'css/chatroom.css' %}">
     <title>  
         {{news.title}}
