fix: Update styling for chatroom

--- a/authentication/templates/base.html
+++ b/authentication/templates/base.html
@@ -17,6 +17,7 @@
     {% endif %}
     {% block content %}
     {% endblock %}
+    <footer>Data supplied by <a href="https://newsapi.org/">NewsApi</a></footer>
   </main>
 </body>
 </html>
