--- a/blog/static/css/chatroom.css
+++ b/blog/static/css/chatroom.css
@@ -1,46 +1,48 @@
 .chatroom{
-    border: 1px solid grey;
     margin: auto;
     width: 90%;
     height: 87%;
 }
 .title{
-    height:5%;
-    font-weight: 200;
     font-size: 20px;
-    border-radius: 5px;
-    padding: 20px;
-    border: 1px solid black;
 }
 .body{
     width: 100%;
     height: 93%;
-    overflow: hidden;
-    display: flex;
+    line-height: 1.5rem;
+    display: flex;    
 }
 /* Posts */
 .img{
     float: left;
     width: 100%;
+    height: 300px;
 }
 .post{
-    padding: 0;
     margin: 0;
     width: 50%;
+    padding: 20px;
     height: 100%;
+    margin: 20px;
+    background: #ebebeba1;
+    border-radius: 10px;
+    overflow-y: scroll;
 }
 .post p{
     text-align: left;
 }
 /* Comment */
 .comment{
-    pointer-events: all;
-    background-color:#80808029;
+    margin: 0;
     width: 50%;
+    padding: 20px;
     height: 100%;
+    margin: 20px;
+    background: #ebebeba1;
+    border-radius: 10px;
 }
 .commentbox{
-    height: 60%;
+    height: 80%;
     overflow-y: scroll;
 }
 .comment input{
