feat: Update css

--- a/blog/templates/static/chatroom.html
+++ b/blog/templates/static/chatroom.html
@@ -29,7 +29,7 @@
                     <p>
                         {{news.post}}
                         <br>                        
-                        <span class="name">View full article from source: <a href="{{news.url}}">{{news.source}}</a></span>
+                        <span >View full article from source: <a class="name" href="{{news.url}}">{{news.source}}</a></span>
                     </p>
                 </div>
                 <div class="comment">
