fix: Display placeholder profile image when no image is present

--- a/blog/templates/static/blog.html
+++ b/blog/templates/static/blog.html
@@ -36,6 +36,6 @@
                 {% endfor %}
         </div>
         </div>
-        <footer>Data supplied by NewsApi Website</footer>
+        <footer>Data supplied by News API</footer>
     </body>
 </html>
