--- a/blog/templates/static/profile.html
+++ b/blog/templates/static/profile.html
@@ -34,11 +34,13 @@
                         <li>Total story engagement: {{storiesNum}}</li>
                         <li>Verified field: Coming soon</li>
                     </ul>
-                    <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
-                        <input type="file" name="image" accept="image/*" id="image">
-                        <input type="hidden" name="user" value={{user}}>
-                        <input type="submit" value = "Update_Profile">
-                    </form>
+                    {% if canEdit%}
+                        <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+                            <input type="file" name="image" accept="image/*" id="image">
+                            <input type="hidden" name="user" value={{user}}>
+                            <input type="submit" value = "Update_Profile">
+                        </form>
+                    {% endif %}
                 </div>
             </div>
             <div class="chatinfo">
