feat: Update blog stories

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -81,7 +81,8 @@ a{
     overflow-y: hidden;
     font-size: medium;
 }
+/*
 ::-webkit-scrollbar {
     width: 0px;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-}
+    /* background: transparent;  Optional: just make scrollbar invisible */
+/* } */
