--- a/blog/templates/static/blog.html
+++ b/blog/templates/static/blog.html
@@ -9,7 +9,7 @@
     <header>
     </header>
     <body>
-        <div>
+        <div class="mainPage">
         {% block pagecontent %}
         <div class="header">
             <a class="left" href="{% url 'home' %}">
